2287.	[bug]		Use 'volatile' if the compiler supports it. [RT #17413]

2286.	[func]		Allow a TCP connection to be used as a weak
			authentication method for reverse zones.
			New update-policy methods tcp-self and 6to4-self.
			[RT #17378]

2285.	[func]		Test framework for client memory context management.
			[RT #17377]

2284.	[bug]		Memory leak in UPDATE prerequisite processing.
			[RT #17377]

2283.	[bug]		TSIG keys were not attaching to the memory
			context.  TSIG keys should use the rings
			memory context rather than the clients memory
			context. [RT #17377]

2282.	[bug]		Acl code fixups. [RT #17346] [RT #17374]

2281.	[bug]		Attempts to use undefined acls were not being logged.
			[RT #17307]

2280.	[func]		Allow the experimental http server to be reached
			over IPv6 as well as IPv4. [RT #17332]

2279.   [bug]           Use setsockopt(SO_NOSIGPIPE), when available,
			to protect applications from receiving spurious
			SIGPIPE signals when using the resolver.

2278.	[bug]		win32: handle the case where Windows returns no
			searchlist or DNS suffix. [RT #17354]

2277.	[bug]		Empty zone names were not correctly being caught at
			in the post parse checks. [RT #17357]

2276.	[bug]		Install <dst/gssapi.h>.  [RT# 17359]

2275.	[func]		Add support to dig to perform IXFR queries over UDP.
			[RT #17235]

2274.	[func]		Log zone transfer statistics. [RT #17161]

2273.	[bug]		Adjust log level to WARNING when saving inconsistant
			stub/slave master and journal files. [RT# 17279]

2272.	[bug]		Handle illegal dnssec-lookaside trust-anchor names.
			[RT #17262]

2271.	[bug]		Fix a memory leak in http server code [RT #17100]

2270.	[bug]		dns_db_closeversion() version->writer could be reset
			before it is tested. [RT #17290]

2269.	[contrib]	dbus memory leaks and missing va_end calls. [RT #17232]

2268.	[bug]		0.IN-ADDR.ARPA was missing from the empty zones
			list.

	--- 9.5.0b1 released ---

2267.   [bug]           Radix tree node_num value could be set incorrectly,