@@ -1,3 +1,6 @@
+2288.	[port]		win32: mark service as running when we have finished
+			loading.  [RT #17441]
+
 2287.	[bug]		Use 'volatile' if the compiler supports it. [RT #17413]
 
 2286.	[func]		Allow a TCP connection to be used as a weak
